--- a/index.html
+++ b/index.html
@@ -94,12 +94,38 @@
         </section>
         <section class="sectionEight">
             <img src="resources/Group 61.png" alt="" class="email">
-            <h2 class="Merriweather">Subscribe Newsletter</h2>
-            <p class="Inter">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. 
+            <h2 class="Merriweather Subscribe">Subscribe Newsletter</h2>
+            <p class="Inter lastP">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. 
                 Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            <input type="text"> <button>Subscribe</button>
+            <input type="text" class="inp"> 
+            <button class="btnS"><span class="btnT">Subscribe</span></button>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="row1">
+            <div>
+                <p class="fPara">44, Big Building Roosevelt Street<br>
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div>
+                <img src="resources/Call.png" alt="" class="phone"><p class="mobile">+00 123 584 124</p>
+                <img src="resources/Website.png" alt="" class="website"><p class="site">www.website.com</p>
+            </div>
+        </div>
+        <div class="row2">
+            <img src="resources/Facebook.png" alt="" class="icon">
+            <img src="resources/Instagram.png" alt="" class="icon">
+            <img src="resources/Twitter.png" alt="" class="icon">
+            <img src="resources/Linkedin.png" alt="" class="icon">
+        </div>
+        <div class="row3">
+            <div>
+                <p class="copy">2017, All Rights Reserved.</p>
+            </div>
+            <div>
+                <p class="lastU">Unsubscribe</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
