--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header></header>
     <main>
         <section class="sectionOne">
-            <img src="resources/Banner Image.png" alt="">
+            <img src="resources/Banner Image.png" alt="" class="bannerImage">
             <div class="centered">
                 <h3 class="Merriweather textOne">Happy New Year</h3>
                 <h1 class="Merriweather textTwo">New Year Party <br> Celebration</h1>
@@ -27,7 +27,7 @@
             <img src="resources/New Year Photo.png" alt="">
         </section>
         <section class="sectionThree">
-            <img src="resources/Vectorrr.png" alt="">
+            <img src="resources/Vectorrr.png" alt="" class="image3">
             <div class="left">
                 <h1 class="Merriweather header">Welcome to <br> midnight party</h1>
             <p class="info">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
@@ -69,10 +69,10 @@
             <p class="Inter para6">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
                 molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
                 Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
-                <div class="tripleImages">
-                    <img src="resources/Group 75.png" alt="">
-                    <img src="resources/Group 44.png" alt="">
-                    <img src="resources/Rectangle 1.png" alt="">
+            <div class="tripleImages">
+                    <img src="resources/Group 75.png" alt="" class="firstImage">
+                    <img src="resources/Group 44.png" alt="" class="middleImage">
+                    <img src="resources/Rectangle 1.png" alt="" class="thirdImage">
                 </div>
                 <div class="soloImage">
                     <img src="resources/Rectangle 2.png" alt="">
@@ -108,8 +108,9 @@
                     Beach Gardens Florida 33410</p>
             </div>
             <div>
-                <img src="resources/Call.png" alt="" class="phone"><p class="mobile">+00 123 584 124</p>
-                <img src="resources/Website.png" alt="" class="website"><p class="site">www.website.com</p>
+                <div class="inline"><img src="resources/Call.png" alt="" class="phone"><p class="mobile">+00 123 584 124</p></div>
+                <div class="inline"><img src="resources/Website.png" alt="" class="website"><p class="site">www.website.com</p></div>
+                
             </div>
         </div>
         <div class="row2">
