--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
                 </div>
         </section>
         <section class="sectionSeven">
-            <h3 class="Inter gifts">THE BEST GIFTS</h3>
-            <h2 class="Merriweather pHeader">Our Awesome Portfolio</h2>
-            <p class="Inter pp7">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-                molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="divided">
+                <h3 class="Inter gifts">THE BEST GIFTS</h3>
+                <h2 class="Merriweather pHeader">Our Awesome Portfolio</h2>
+                <p class="Inter pp7">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            
             <div>
                 <img src="resources/Rectangle 3.png" alt="" class="image">
                 <img src="resources/Rectangle 4.png" alt="" class="image">
@@ -95,8 +98,10 @@
         <section class="sectionEight">
             <img src="resources/Group 61.png" alt="" class="email">
             <h2 class="Merriweather Subscribe">Subscribe Newsletter</h2>
-            <p class="Inter lastP">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. 
-                Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="Inter lastP">Sign up to our newsletter,  
+                so you can be the first to find out the latest news and tips about applications, 
+                as well as general updates throughout the year. By subscribing to this mailing list, you are 
+                opting in to receiving email updates from us. We process your personal data in line with our privacy policy.</p>
             <input type="text" class="inp"> 
             <button class="btnS"><span class="btnT">Subscribe</span></button>
         </section>
