--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <p class="fPara">44, Big Building Roosevelt Street<br>
                     Beach Gardens Florida 33410</p>
             </div>
-            <div>
+            <div class="clear">
                 <div class="inline"><img src="resources/Call.png" alt="" class="phone"><p class="mobile">+00 123 584 124</p></div>
                 <div class="inline"><img src="resources/Website.png" alt="" class="website"><p class="site">www.website.com</p></div>
                 
